objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>Price_Book_Ext_Id__c</fullName>
        <description>External Id for Copado ADD</description>
        <externalId>true</externalId>
        <label>Price Book Ext Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOpportunityDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Opportunity Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOrderDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Order Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__isQuoteDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Quote Default</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>